<resources>
    <string name="app_name">FastTaqvim</string>
    <string name="start_ramadan_duo">Navaytu an asuvma sovma shahro ramazona minal fajri ilal mag‘ribi, xolisan lillahi ta\'aalaa, Allohu akbar.</string>
    <string name="start_ramadan_duo_arab">نَوَيْتُ أَنْ أَصُومَ صَوْمَ شَهْرَ رَمَضَانَ مِنَ الْفَجْرِ إِلَى الْمَغْرِبِ، خَالِصًا لِلهِ تَعَالَى أَللهُ أَكْبَرُ</string>
    <string name="start_ramadan_duo_translate">Ma\'nosi: Ramazon oyining ro‘zasini subhdan to kun botguncha tutmoqni niyat qildim. Xolis Alloh uchun Alloh buyukdir.</string>
    <string name="end_ramadan_duo">Allohumma laka sumtu va bika amantu va a\'alayka tavakkaltu va \'ala rizqika aftartu, fag‘firli, ya G‘offaru, ma qoddamtu vama axxortu.</string>
    <string name="end_ramadan_duo_arab">اَللَّهُمَّ لَكَ صُمْتُ وَ بِكَ آمَنْتُ وَ عَلَيْكَ تَوَكَّلْتُ وَ عَلَى رِزْقِكَ أَفْتَرْتُ، فَغْفِرْلِى مَا قَدَّمْتُ وَ مَا أَخَّرْتُ بِرَحْمَتِكَ يَا أَرْحَمَ الرَّاحِمِينَ</string>
    <string name="end_ramadan_duo_translate">Ma\'nosi: Ey Alloh, ushbu ro‘zamni Sen uchun tutdim va Senga iymon keltirdim va Senga tavakkal qildim va bergan rizqing bilan iftor qildim. Ey mehribonlarning eng mehriboni, mening avvalgi va keyingi gunohlarimni mag‘firat qilgil!.</string>
</resources>