<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingTop="50dp"
    android:clipToPadding="false"
    android:scrollbars="none"
    tools:context=".ui.home.read.ReadFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="Og`iz yopish duosi"
                android:textColor="#577590"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/start_ramadan_duo_arab"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:justificationMode="inter_word"
                android:text="@string/start_ramadan_duo"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:justificationMode="inter_word"
                android:text="@string/start_ramadan_duo_translate"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="Og`iz ochish duosi"
                android:textColor="#577590"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/end_ramadan_duo_arab"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:justificationMode="inter_word"
                android:text="@string/end_ramadan_duo"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:justificationMode="inter_word"
                android:text="@string/end_ramadan_duo_translate"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>